== Version 1.0.7

* Fix thread local headers to store a copy of the default hash which
prevents activate_session in one thread from affecting other threads.

== Version 1.0.6

* Fix deserializing and serializing fulfillments which can now contain
arrays of strings in the tracking_urls attribute.

== Version 1.0.5

* Fix parameter passing for order cancellation.
* Fix Product.price_range method for variants with different prices.

== Version 1.0.4

* Fixed another bug in Image size methods regex.

== Version 1.0.3

* Fix bug in setting format attribute on Webhook instances.
* Fixed missing slash in return value of Image size methods
* Upgrade pyactiveresource to fix unicode encoding issues

== Version 1.0.2

* Made ShopifyResource.clear_session idempotent.

== Version 1.0.1

* Use the correct redirect parameter in Session.create_permission_url.
Was redirect_url but corrected to redirect_uri.

== Version 1.0.0

* Added support for OAuth2.
* ShopifyResource.activate_session must now be used with OAuth2 instead
of setting ShopifyResource.site directly.
* Session.__init__ no longer allows params to be passed in as **params
* Session.__init__ now makes an HTTP request when using OAuth2 if
params are specified
* Session now exposes the access token through the token instance
variable to simplify session saving and resuming

== Version 0.4.0

* Using setup.py no longer requires all dependancies
* More compatiblity fixes for using the latest pyactiveresource
* ShopifyResource.activate_session is not recommended over setting site
directly for forward compatibility with coming OAuth2 changes.

== Version 0.3.1

* Compatiblity fixes for using latest (unreleased) pyactiveresource

== Version 0.3.0

* Added support for customer search and customer group search.
* Resource erros are cleared on save from previous save attempt.
* Made the library thread-safe using thread-local connections.

== Version 0.2.1

* Fixed a regression that caused a different connection